# src/main/java/org/openapitools/api/MenuItemApi.java
@@ -1,28 +1,28 @@
-/**
+/*
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (unset).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 package org.openapitools.api;
 
+import java.util.List;
+import java.util.Optional;
+import io.swagger.annotations.Api;
+import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
+import io.swagger.annotations.ApiResponse;
+import io.swagger.annotations.ApiResponses;
+import io.swagger.annotations.Authorization;
 import org.openapitools.model.MenuItemDto;
-import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.data.domain.Pageable;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
-import springfox.documentation.annotations.ApiIgnore;
 
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-01-09T10:47:45.444934-08:00[America/Los_Angeles]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-01-14T22:05:57.338245-08:00[America/Los_Angeles]")
 @Validated
 @Api(value = "menuItem", description = "the menuItem API")
 public interface MenuItemApi {
@@ -37,7 +37,10 @@ public interface MenuItemApi {
      *
      * @return Found (status code 200)
      */
-    @ApiOperation(value = "Get all menu items.", nickname = "getAll", notes = "Retrieve all menu items ", response = MenuItemDto.class, responseContainer = "List", tags={  })
+    @ApiOperation(value = "Get all menu items.", nickname = "getAll", notes = "Retrieve all menu items ", response = MenuItemDto.class, responseContainer = "List", authorizations = {
+        
+        @Authorization(value = "bearerAuth")
+         }, tags={  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "Found", response = MenuItemDto.class, responseContainer = "List") })
     @GetMapping(
@@ -67,7 +70,10 @@ public interface MenuItemApi {
      * @return Found (status code 200)
      *         or NotFound (status code 404)
      */
-    @ApiOperation(value = "Gets a menuItem by ID", nickname = "getMenuItem", notes = "Gets a MenuItem by its ID.", response = MenuItemDto.class, tags={  })
+    @ApiOperation(value = "Gets a menuItem by ID", nickname = "getMenuItem", notes = "Gets a MenuItem by its ID.", response = MenuItemDto.class, authorizations = {
+        
+        @Authorization(value = "bearerAuth")
+         }, tags={  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "Found", response = MenuItemDto.class),
         @ApiResponse(code = 404, message = "NotFound") })
